# aurora-evm

./: .gitignore  CHANGELOG.md  CMANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: lint.yml  rust.yml
core/src/: memory.rs
evm/: Cargo.toml  tracing.rs
evm-block-execution/: Cargo.toml
evm-block-execution/src/: blob.rs  block.rs  errors.rs  evm.rs  evm_context.rs  lib.rs  spec.rs  transaction.rs
evm-block-execution/src/transaction/: access_list.rs  eip7825.rs  tx_kind.rs  tx_type.rs
evm-tests/: Cargo.toml
evm-tests/EIP-152/: Cargo.toml
evm-tests/EIP-152/benches/: bench.rs
evm-tests/EIP-152/src/: avx2.rs  lib.rs
evm-tests/ethcore-builtin/: Cargo.toml
evm-tests/ethcore-builtin/src/: bls.rs  kzg.rs  lib.rs
evm-tests/ethjson/src/: bytes.rs  maybe.rs  state.rs  transaction.rs  uint.rs  vm.rs
evm-tests/ethjson/src/spec/: account.rs  authority_round.rs  builtin.rs  clique.rs  ethash.rs  genesis.rs  hardcoded_sync.rs  instant_seal.rs  mod.rs  null_engine.rs  params.rs  seal.rs  spec.rs  state.rs  step_duration.rs  validator_set.rs
evm-tests/ethjson/src/test_helpers/: difficulty.rs  skip.rs  state.rs  transaction.rs
evm-tests/ethjson/src/test_helpers/blockchain/: block.rs  header.rs  mod.rs
evm-tests/ethjson/src/test_helpers/trie/: input.rs  mod.rs
evm-tests/jsontests/: Cargo.toml
evm-tests/jsontests/src/: _precompiles.rs  assertions.rs  config.rs  execution_results.rs  lib.rs  main.rs  old_precompiles.rs  precompiles.rs  state.rs  state_dump.rs  utils.rs  vm.rs
evm-tests/jsontests/src/precompiles/: kzg.rs
evm-tests/jsontests/src/types/: account_state.rs  blob.rs  eip_7623.rs  info.rs  json_utils.rs  mod.rs  spec.rs  transaction.rs  vm.rs
evm-tests/src/: assertions.rs  config.rs  execution_results.rs  lib.rs  main.rs  precompiles.rs  state.rs  vm.rs
evm-tests/src/precompiles/: kzg.rs
evm-tests/src/types/: account_state.rs  blob.rs  ecrecover.rs  eip_4844.rs  eip_7623.rs  eip_7702.rs  json_utils.rs  mod.rs  spec.rs  transaction.rs  vm.rs
evm/gasometer/: memory.rs
evm/runtime/eval/: system.rs
evm/src/: lib.rs  maybe_borrowed.rs  tracing.rs
evm/src/backend/: memory.rs  mod.rs
evm/src/core/: error.rs  external.rs  memory.rs  mod.rs  opcode.rs  stack.rs  utils.rs  valids.rs
evm/src/core/eval/: arithmetic.rs  bitwise.rs  macros.rs  misc.rs  mod.rs
evm/src/core/tests/: performance.rs
evm/src/executor/stack/: executor.rs  memory.rs  mod.rs  precompile.rs  tagged_runtime.rs
evm/src/gasometer/: costs.rs  memory.rs  mod.rs  tracing.rs  utils.rs
evm/src/runtime/: handler.rs  interrupt.rs  mod.rs  tracing.rs
evm/src/runtime/eval/: macros.rs  mod.rs  system.rs
gasometer/src/: lib.rs
runtime/src/eval/: system.rs
src/executor/stack/: executor.rs  memory.rs
zk-evm/: Cargo.toml  Makefile
zk-evm/core/: Cargo.toml
zk-evm/core/src/: lib.rs  spec.rs  transaction.rs
zk-evm/methods/guest/: Cargo.toml
zk-evm/methods/guest/src/: main.rs
zk-evm/src/: main.rs  types.rs
