[workspace]
resolver = "2"
members = [
    "evm",
    "evm-tests/jsontests"
]

[workspace.package]
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2021"
version = "2.1.1"
description = "Aurora Ethereum Virtual Machine implementation written in pure Rust"
categories = ["no-std", "compilers", "cryptography::cryptocurrencies"]
keywords = ["aurora-evm", "evm", "ethereum", "blockchain", "no_std"]
repository = "https://github.com/aurora-is-near/aurora-evm"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
aurora-evm = { path = "evm" }
auto_impl = "1.0"
primitive-types = { version = "0.13", default-features = false }
rlp = { version = "0.6", default-features = false, features = ["derive"] }
sha3 = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"] }
