[package]
name = "aurora-evm-jsontests"
version.workspace = true
license = "MIT"
authors.workspace = true
description = "Aurora EVM json tests"
repository.workspace = true
keywords.workspace = true
edition.workspace = true
publish = false

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
aurora-evm.workspace = true
primitive-types = { workspace = true, features = ["serde"] }
rlp.workspace = true
sha3.workspace = true
serde.workspace = true

serde_json = "1.0"
hex = "0.4"
clap = { version = "4.5", features = ["cargo"] }
ethereum = "0.15"
libsecp256k1 = "0.7"
#bytecount = "0.6"
#parity-bytes = "0.1"
#hex-literal = "0.4"

#ethjson = { path = "../ethjson", features = ["test-helpers"] }
#ethcore-builtin = { path = "../ethcore-builtin" }

[features]
enable-slow-tests = []
print-debug = ["aurora-evm/print-debug"]

dump-state = ["aurora-evm/with-serde"]
