[package]
name = "zk_evm"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
aurora-evm = { path = "../../../evm" }
aurora-evm-jsontests = { path = "../../../evm-tests" }
risc0-zkvm = { version = "^3.0.4", default-features = false, features = ['std'] }
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
